Use RequestParams in RestUtils.decodeQueryString and addParam
- decodeQueryString now returns RequestParams directly, built via the new
  package-private addValue() method, eliminating the intermediate Map<String, List<String>>
- addParam takes RequestParams instead of Map<String, List<String>>
- fromQueryString no longer needs the of() wrapping step
- Backing field widened to Map<String, List<String>>; copy logic moved into of()
- getAll() returns Collections.unmodifiableList to prevent callers mutating
  the backing list
- put() uses Collections.singletonList (no ArrayList needed for replacements)